fix dark mode disclaimer

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ body.dark-mode .top-bar {
      color: #f4f4f4;
 }
 .dark-mode .quote,
+.dark-mode .disclaimer,
 .dark-mode #section1,
 .dark-mode #section2,
 .dark-mode .tab {
